packages/cf-units/cf_units-3.3.1-cp311-abi3-win_amd64.whl/cf_units/_udunits2_parser/parser/udunits2Parser.py
# Generated by ANTLR 4.11.1
import sys

from cf_units._udunits2_parser._antlr4_runtime import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO



class udunits2Parser(Parser):
    grammarFileName = "udunits2Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "<INVALID>",
        "'+'",
        "<INVALID>",
        "<INVALID>",
        "'.'",
        "'('",
        "')'",
        "':'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'-'",
    ]

    symbolicNames = [
        "<INVALID>",
        "SIGNED_INT",
        "PLUS",
        "MULTIPLY",
        "DIVIDE",
        "PERIOD",
        "OPEN_PAREN",
        "CLOSE_PAREN",
        "SEMICOLON",
        "INT",
        "E_POWER",
        "FLOAT",
        "SHIFT_OP",
        "UNICODE_EXPONENT",
        "RAISE",
        "LOG",
        "LOGREF",
        "ID",
        "LATIN_SUBSET",
        "WS",
        "ERRORCHARACTER",
        "TIMEZONE",
        "HOUR_MINUTE_SECOND",
        "HOUR_MINUTE",
        "M_MINUS",
        "DATE",
        "TIMESTAMP",
        "DT_T_CLOCK",
    ]

    RULE_unit_spec = 0
    RULE_shift_spec = 1
    RULE_product = 2
    RULE_power = 3
    RULE_basic_spec = 4
    RULE_integer = 5
    RULE_number = 6
    RULE_timestamp = 7
    RULE_signed_clock = 8
    RULE_timezone_offset = 9

    ruleNames = [
        "unit_spec",
        "shift_spec",
        "product",
        "power",
        "basic_spec",
        "integer",
        "number",
        "timestamp",
        "signed_clock",
        "timezone_offset",
    ]

    EOF = Token.EOF
    SIGNED_INT = 1
    PLUS = 2
    MULTIPLY = 3
    DIVIDE = 4
    PERIOD = 5
    OPEN_PAREN = 6
    CLOSE_PAREN = 7
    SEMICOLON = 8
    INT = 9
    E_POWER = 10
    FLOAT = 11
    SHIFT_OP = 12
    UNICODE_EXPONENT = 13
    RAISE = 14
    LOG = 15
    LOGREF = 16
    ID = 17
    LATIN_SUBSET = 18
    WS = 19
    ERRORCHARACTER = 20
    TIMEZONE = 21
    HOUR_MINUTE_SECOND = 22
    HOUR_MINUTE = 23
    M_MINUS = 24
    DATE = 25
    TIMESTAMP = 26
    DT_T_CLOCK = 27

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class Unit_specContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(udunits2Parser.EOF, 0)

        def shift_spec(self):
            return self.getTypedRuleContext(
                udunits2Parser.Shift_specContext, 0
            )

        def getRuleIndex(self):
            return udunits2Parser.RULE_unit_spec

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUnit_spec"):
                return visitor.visitUnit_spec(self)
            else:
                return visitor.visitChildren(self)

    def unit_spec(self):
        localctx = udunits2Parser.Unit_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_unit_spec)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and ((1 << _la) & 133698) != 0:
                self.state = 20
                self.shift_spec()

            self.state = 23
            self.match(udunits2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Shift_specContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def product(self):
            return self.getTypedRuleContext(udunits2Parser.ProductContext, 0)

        def SHIFT_OP(self):
            return self.getToken(udunits2Parser.SHIFT_OP, 0)

        def number(self):
            return self.getTypedRuleContext(udunits2Parser.NumberContext, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(udunits2Parser.WS)
            else:
                return self.getToken(udunits2Parser.WS, i)

        def timestamp(self):
            return self.getTypedRuleContext(udunits2Parser.TimestampContext, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_shift_spec

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitShift_spec"):
                return visitor.visitShift_spec(self)
            else:
                return visitor.visitChildren(self)

    def shift_spec(self):
        localctx = udunits2Parser.Shift_specContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 2, self.RULE_shift_spec)
        self._la = 0  # Token type
        try:
            self.state = 46
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 25
                self.product(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.product(0)
                self.state = 28
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 19:
                    self.state = 27
                    self.match(udunits2Parser.WS)

                self.state = 30
                self.match(udunits2Parser.SHIFT_OP)
                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 19:
                    self.state = 31
                    self.match(udunits2Parser.WS)

                self.state = 34
                self.number()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 36
                self.product(0)
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 19:
                    self.state = 37
                    self.match(udunits2Parser.WS)

                self.state = 40
                self.match(udunits2Parser.SHIFT_OP)
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 19:
                    self.state = 41
                    self.match(udunits2Parser.WS)

                self.state = 44
                self.timestamp()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProductContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def power(self):
            return self.getTypedRuleContext(udunits2Parser.PowerContext, 0)

        def product(self):
            return self.getTypedRuleContext(udunits2Parser.ProductContext, 0)

        def MULTIPLY(self):
            return self.getToken(udunits2Parser.MULTIPLY, 0)

        def DIVIDE(self):
            return self.getToken(udunits2Parser.DIVIDE, 0)

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(udunits2Parser.WS)
            else:
                return self.getToken(udunits2Parser.WS, i)

        def getRuleIndex(self):
            return udunits2Parser.RULE_product

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProduct"):
                return visitor.visitProduct(self)
            else:
                return visitor.visitChildren(self)

    def product(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = udunits2Parser.ProductContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_product, _p)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.power()
            self._ctx.stop = self._input.LT(-1)
            self.state = 68
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 8, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 66
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(
                        self._input, 7, self._ctx
                    )
                    if la_ == 1:
                        localctx = udunits2Parser.ProductContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_product
                        )
                        self.state = 51
                        if not self.precpred(self._ctx, 4):
                            from cf_units._udunits2_parser._antlr4_runtime.error.Errors import (
                                FailedPredicateException,
                            )

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 4)"
                            )
                        self.state = 52
                        self.power()
                        pass

                    elif la_ == 2:
                        localctx = udunits2Parser.ProductContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_product
                        )
                        self.state = 53
                        if not self.precpred(self._ctx, 3):
                            from cf_units._udunits2_parser._antlr4_runtime.error.Errors import (
                                FailedPredicateException,
                            )

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 3)"
                            )
                        self.state = 54
                        self.match(udunits2Parser.MULTIPLY)
                        self.state = 55
                        self.power()
                        pass

                    elif la_ == 3:
                        localctx = udunits2Parser.ProductContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_product
                        )
                        self.state = 56
                        if not self.precpred(self._ctx, 2):
                            from cf_units._udunits2_parser._antlr4_runtime.error.Errors import (
                                FailedPredicateException,
                            )

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 2)"
                            )
                        self.state = 57
                        self.match(udunits2Parser.DIVIDE)
                        self.state = 58
                        self.power()
                        pass

                    elif la_ == 4:
                        localctx = udunits2Parser.ProductContext(
                            self, _parentctx, _parentState
                        )
                        self.pushNewRecursionContext(
                            localctx, _startState, self.RULE_product
                        )
                        self.state = 59
                        if not self.precpred(self._ctx, 1):
                            from cf_units._udunits2_parser._antlr4_runtime.error.Errors import (
                                FailedPredicateException,
                            )

                            raise FailedPredicateException(
                                self, "self.precpred(self._ctx, 1)"
                            )
                        self.state = 61
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 60
                            self.match(udunits2Parser.WS)
                            self.state = 63
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not (_la == 19):
                                break

                        self.state = 65
                        self.power()
                        pass

                self.state = 70
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 8, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PowerContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basic_spec(self):
            return self.getTypedRuleContext(
                udunits2Parser.Basic_specContext, 0
            )

        def integer(self):
            return self.getTypedRuleContext(udunits2Parser.IntegerContext, 0)

        def RAISE(self):
            return self.getToken(udunits2Parser.RAISE, 0)

        def UNICODE_EXPONENT(self):
            return self.getToken(udunits2Parser.UNICODE_EXPONENT, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_power

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPower"):
                return visitor.visitPower(self)
            else:
                return visitor.visitChildren(self)

    def power(self):
        localctx = udunits2Parser.PowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_power)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.basic_spec()
                self.state = 72
                self.integer()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.basic_spec()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.basic_spec()
                self.state = 76
                self.match(udunits2Parser.RAISE)
                self.state = 77
                self.integer()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.basic_spec()
                self.state = 80
                self.match(udunits2Parser.UNICODE_EXPONENT)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Basic_specContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(udunits2Parser.ID, 0)

        def OPEN_PAREN(self):
            return self.getToken(udunits2Parser.OPEN_PAREN, 0)

        def shift_spec(self):
            return self.getTypedRuleContext(
                udunits2Parser.Shift_specContext, 0
            )

        def CLOSE_PAREN(self):
            return self.getToken(udunits2Parser.CLOSE_PAREN, 0)

        def number(self):
            return self.getTypedRuleContext(udunits2Parser.NumberContext, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_basic_spec

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBasic_spec"):
                return visitor.visitBasic_spec(self)
            else:
                return visitor.visitChildren(self)

    def basic_spec(self):
        localctx = udunits2Parser.Basic_specContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 8, self.RULE_basic_spec)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(udunits2Parser.ID)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.match(udunits2Parser.OPEN_PAREN)
                self.state = 86
                self.shift_spec()
                self.state = 87
                self.match(udunits2Parser.CLOSE_PAREN)
                pass
            elif token in [1, 9, 11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.number()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntegerContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(udunits2Parser.INT, 0)

        def SIGNED_INT(self):
            return self.getToken(udunits2Parser.SIGNED_INT, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_integer

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInteger"):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)

    def integer(self):
        localctx = udunits2Parser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_integer)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            _la = self._input.LA(1)
            if not (_la == 1 or _la == 9):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer(self):
            return self.getTypedRuleContext(udunits2Parser.IntegerContext, 0)

        def FLOAT(self):
            return self.getToken(udunits2Parser.FLOAT, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_number

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNumber"):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)

    def number(self):
        localctx = udunits2Parser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_number)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.integer()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(udunits2Parser.FLOAT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TimestampContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATE(self):
            return self.getToken(udunits2Parser.DATE, 0)

        def INT(self):
            return self.getToken(udunits2Parser.INT, 0)

        def signed_clock(self):
            return self.getTypedRuleContext(
                udunits2Parser.Signed_clockContext, 0
            )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(udunits2Parser.WS)
            else:
                return self.getToken(udunits2Parser.WS, i)

        def timezone_offset(self):
            return self.getTypedRuleContext(
                udunits2Parser.Timezone_offsetContext, 0
            )

        def DT_T_CLOCK(self):
            return self.getToken(udunits2Parser.DT_T_CLOCK, 0)

        def TIMESTAMP(self):
            return self.getToken(udunits2Parser.TIMESTAMP, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_timestamp

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTimestamp"):
                return visitor.visitTimestamp(self)
            else:
                return visitor.visitChildren(self)

    def timestamp(self):
        localctx = udunits2Parser.TimestampContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_timestamp)
        self._la = 0  # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 17, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 98
                _la = self._input.LA(1)
                if not (_la == 9 or _la == 25):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 99
                _la = self._input.LA(1)
                if not (_la == 9 or _la == 25):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 19:
                    self.state = 100
                    self.match(udunits2Parser.WS)

                self.state = 103
                self.signed_clock()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 8913410) != 0:
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la == 19:
                        self.state = 104
                        self.match(udunits2Parser.WS)

                    self.state = 107
                    self.timezone_offset()

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.match(udunits2Parser.DT_T_CLOCK)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.match(udunits2Parser.TIMESTAMP)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 19:
                    self.state = 112
                    self.match(udunits2Parser.WS)

                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3F) == 0 and ((1 << _la) & 8389122) != 0:
                    self.state = 115
                    self.timezone_offset()

                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Signed_clockContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HOUR_MINUTE_SECOND(self):
            return self.getToken(udunits2Parser.HOUR_MINUTE_SECOND, 0)

        def HOUR_MINUTE(self):
            return self.getToken(udunits2Parser.HOUR_MINUTE, 0)

        def integer(self):
            return self.getTypedRuleContext(udunits2Parser.IntegerContext, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_signed_clock

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSigned_clock"):
                return visitor.visitSigned_clock(self)
            else:
                return visitor.visitChildren(self)

    def signed_clock(self):
        localctx = udunits2Parser.Signed_clockContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 16, self.RULE_signed_clock)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(udunits2Parser.HOUR_MINUTE_SECOND)
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(udunits2Parser.HOUR_MINUTE)
                pass
            elif token in [1, 9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.integer()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Timezone_offsetContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HOUR_MINUTE(self):
            return self.getToken(udunits2Parser.HOUR_MINUTE, 0)

        def integer(self):
            return self.getTypedRuleContext(udunits2Parser.IntegerContext, 0)

        def getRuleIndex(self):
            return udunits2Parser.RULE_timezone_offset

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTimezone_offset"):
                return visitor.visitTimezone_offset(self)
            else:
                return visitor.visitChildren(self)

    def timezone_offset(self):
        localctx = udunits2Parser.Timezone_offsetContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 18, self.RULE_timezone_offset)
        try:
            self.state = 127
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(udunits2Parser.HOUR_MINUTE)
                pass
            elif token in [1, 9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.integer()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    def sempred(self, localctx: RuleContext, ruleIndex: int, predIndex: int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.product_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def product_sempred(self, localctx: ProductContext, predIndex: int):
        if predIndex == 0:
            return self.precpred(self._ctx, 4)

        if predIndex == 1:
            return self.precpred(self._ctx, 3)

        if predIndex == 2:
            return self.precpred(self._ctx, 2)

        if predIndex == 3:
            return self.precpred(self._ctx, 1)
